--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Hannah's Artificial Intelligence Blog
-description: The purpose of this blog is to document my learning of Artificial Intelligence from the fastai course. 
+description: Documentation of learning through fastai course and ELEC4630 studies
 github_username: h4656
 
 # Email and twitter are optional:
